2018-01-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Reinhard Max
	patch #8311: Add IPv6 support to the -Pnet:host:port option
	* ser_posix.c (net_open): Rewrite to use getaddrinfo()
	rather than gethostbyname()
	* avrdude.1: Document IPv6 feature
	* doc/avrdude.texi: (Dito)

2018-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Maciej:
	patch #9185: Add extended_param to usbasp.c - erasing
	configuration section in ATtiny 4...40 (TPI)
	* usbasp.c: Implement extended parameter parsing, and modify
	usbasp_tpi_chip_erase() appropriately
	* avrdude.1: Document USBasp extended parameters
	* doc/avrdude.texi: (Dito)

2018-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Tom Carney:
	patch #8219: Fix boot_start for xmega devices on jtagmkII
	* jtagmkII.c (jtagmkII_initialize): Determine boarder between
	application and boot area correctly.

2018-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Jan Egil Ruud <janegil.ruud@microchip.com>
	patch #9507: Fix UPDI chip erase
	* libavrdude.h (PROGRAMMER): add unlock method
	* avr.c (avr_unlock): Generic unlock function
	* jtag3.c: Implement unlock feature; avoid calling
	jtag3_edbg_prepare() and jtag3_edbg_signoff() on XplainedMini
	boards to work around a bug in early firmware versions;
	implement "userrow" memory region
	* main.c: Call avr_unlock() rather than avr_chip_erase() when
	encountering a locked UPDI chip

2018-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Nicolas BRULEZ
	patch #8910: ATxmega32c4 and ATxmega16c4 have wrong signatures
	bug #41388: ATxmega32c4 and ATxmega16c4 have wrong signatures
	* avrdude.conf.in (ATxmega16C4, ATxmega32C4): Fix signatures

2018-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Dennis Reimers:
	patch #8580: FT245r support to select device by serial number
	* ft245r.c (ft245r_open): Add serial number parsing.

2018-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Axel Simon: