@@ -1,3 +1,11 @@
+2018-01-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	Submitted by Jan Egil Ruud:
+	patch #9542: Correct "usersig" on avr8x devices
+	* avrdude.conf.in (.avr8x_tiny, .avr8x_mega): rename "userrow" to
+	"usersig", and fix its page size for .avr8x_mega
+	* jtag3.c: Remove all "userrow" handling
+
 2018-01-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	Submitted by Reinhard Max
